--- a/files/KEYWORD_IOC_MAPPING.json
+++ b/files/KEYWORD_IOC_MAPPING.json
@@ -1,90 +1,377 @@
 {
-    "powershell": ["Malicious or suspicious use of powershell.exe"],
-    "mimikatz": ["Use of mimikatz.exe"],
-    "rundll32.exe": ["Malicious or suspicious use of rundll32.exe"],
-    "mshta.exe": ["Malicious or suspicious use of mshta.exe"],
-    "psexec": ["Malicious use of psexec.exe for lateral movement"],
-    "regsvr32.exe": ["Malicious or suspicious use of regsvr32.exe"],
-    "svchost.exe": ["Malicious or suspicious use of svchost.exe"],
-    "cmd.exe": ["Malicious or suspicious use of cmd.exe"],
-    "tasklist": ["Host reconnaissance via tasklist.exe"],
-    "procdump": ["Malicious or suspicious use of procdump.exe"],
-    "certutil": ["Malicious or suspicious use of certutil"],
-    "schtasks.exe": ["Malicious or suspicious use of schtasks.exe"],
-    "wevtutil": ["Malicious or suspicious use of wevtutil"],
-    "net.exe": ["Malicious or suspicious use of net.exe"],
-    "msiexec.exe": ["Malicious or suspicious use of msiexec.exe"],
-    "winword.exe": ["Malicious or suspicious use of winword.exe"],
-    "wmic.exe": ["Malicious or suspicious use of wmic.exe"],
-    "ntdsutil.exe": ["Malicious or suspicious use of ntdsutil.exe"],
-    "bitsadmin": ["Malicious or suspicious use of bitsadmin"],
-    "installutil.exe": ["Malicious or suspicious use of installutil.exe"],
-    "scilc.exe": ["Malicious or suspicious use of scilc.exe"],
-    "wscript.exe": ["Malicious or suspicious use of wscript.exe"],
-    "wuauclt.exe": ["Malicious or suspicious use of wuauclt.exe"],
-    "http": ["Malicious or suspicious use of http protocol"],
-    "https": ["Malicious or suspicious use of https protocol"],
-    "ftp": ["Malicious or suspicious use of ftp protocol"],
-    "smb": ["Malicious or suspicious use of smb protocol"],
-    "imap": ["Malicious or suspicious use of imap protocol"],
-    "smtp": ["Malicious or suspicious use of smtp protocol"],
-    "dns": ["Malicious or suspicious use of dns protocol"],
-    "rpc": ["Malicious or suspicious use of rpc protocol"],
-    "rdp": ["Malicious or suspicious use of rdp protocol"],
-    "ssh": ["Malicious or suspicious use of ssh protocol"],
-    "tor": ["Malicious or suspicious use of tor protocol"],
-    "vpn": ["Malicious or suspicious use of vpn protocol"],
-    "base64": ["Use of base64 encoding algorithm"],
-    "xor": ["Use of xor encoding algorithm"],
-    "rot13": ["Use of rot13 encoding algorithm"],
-    "gzip": ["Use of gzip encoding algorithm"],
-    "upx": ["Use of upx packing algorithm"],
-    "zip": ["Use of zip encoding algorithm"],
-    "rar": ["Use of rar encoding algorithm"],
-    "python": ["Use of python language for suspicious actions"],
-    "javascript": ["Use of javascript language for suspicious actions"],
-    "vba": ["Use of vba language for suspicious actions"],
-    "powershell-based": ["Use of powershell-based language for suspicious actions"],
-    "powershell.exe": ["Use of powershell.exe language for suspicious actions"],
-    "batch": ["Use of batch language for suspicious actions"],
-    "trickbot": ["Use of trickbot malware"],
-    "emotet": ["Use of emotet malware"],
-    "bokbot": ["Use of bokbot malware"],
-    "njrat": ["Use of njrat malware"],
-    "quasarrat": ["Use of quasarrat malware"],
-    "meterpreter": ["Use of meterpreter malware"],
-    "asyncrat": ["Use of asyncrat malware"],
-    "rainbowminer": ["Use of rainbowminer malware"],
-    "lolminer": ["Use of lolminer malware"],
-    "currentversion": ["Modification of registry key: HKCU\\...\\currentversion\\run or HKLM\\...\\currentversion\\run"],
-    "hklm": ["Modification of registry key: HKLM\\..."],
-    "hkcu": ["Modification of registry key: HKCU\\..."],
-    "hkey_current_user": ["Modification of registry key: HKCU\\..."],
-    "hkey_local_machine": ["Modification of registry key: HKLM\\..."],
-    "hkey_users": ["Modification of registry key: HKU\\..."],
-    "currentcontrolset": ["Modification of registry key: HKLM\\System\\CurrentControlSet\\..."],
-    "CVE-2020-1234": ["Exploitation of CVE-2020-1234"],
-    "CVE 2021-3456": ["Exploitation of CVE-2021-3456"],
-    "CVE-2019-0708": ["Exploitation of CVE-2019-0708 (BlueKeep)"],
-    "CVE-2017-0144": ["Exploitation of CVE-2017-0144 (EternalBlue)"],
-    "CVE-2022-22965": ["Exploitation of CVE-2022-22965 (Spring4Shell)"],
-    "CVE-2018-8174": ["Exploitation of CVE-2018-8174 (Double Kill)"],
-    "CVE-2023-23397": ["Exploitation of CVE-2023-23397 (Outlook Vulnerability)"],
-    "CVE-2014-4114": ["Exploitation of CVE-2014-4114 (Sandworm)"],
-    "CVE-2015-2545": ["Exploitation of CVE-2015-2545 (EPS Zero-Day)"],
-    "CVE-2016-5195": ["Exploitation of CVE-2016-5195 (Dirty COW)"],
-    "CVE-2020-1350": ["Exploitation of CVE-2020-1350 (SigRed)"],
-    "CVE-2013-3893": ["Exploitation of CVE-2013-3893 (Internet Explorer Zero-Day)"],
-    "CVE-2015-1701": ["Exploitation of CVE-2015-1701 (Win32k Privilege Escalation)"],
-    "CVE-2021-3156": ["Exploitation of CVE-2021-3156 (Sudo Bug)"],
-    "CVE-2021-1675": ["Exploitation of CVE-2021-1675 (PrintNightmare)"],
-    "CVE-2017-5638": ["Exploitation of CVE-2017-5638 (Apache Struts)"],
-    "CVE-2016-0167": ["Exploitation of CVE-2016-0167 (Win32k Privilege Escalation)"],
-    "CVE-2019-1132": ["Exploitation of CVE-2019-1132 (Win32k Elevation of Privilege)"],
-    "CVE-2018-8453": ["Exploitation of CVE-2018-8453 (Win32k Privilege Escalation)"],
-    "CVE-2017-11882": ["Exploitation of CVE-2017-11882 (Microsoft Office Memory Corruption)"],
-    "Google Drive": ["Communications with external Google Drive"],
-    "usb": ["HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Control\\usbflags"]
+    "powershell": {
+        "ioc": [
+            "Malicious or suspicious use of powershell.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "PowerShell Logging",
+            "EDR"
+        ]
+    },
+    "mimikatz": {
+        "ioc": [
+            "Use of mimikatz.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "rundll32.exe": {
+        "ioc": [
+            "Malicious or suspicious use of rundll32.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "mshta.exe": {
+        "ioc": [
+            "Malicious or suspicious use of mshta.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "Endpoint Logging"
+        ]
+    },
+    "psexec": {
+        "ioc": [
+            "Malicious use of psexec.exe for lateral movement"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "Network IDS",
+            "EDR"
+        ]
+    },
+    "regsvr32.exe": {
+        "ioc": [
+            "Malicious or suspicious use of regsvr32.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "svchost.exe": {
+        "ioc": [
+            "Malicious or suspicious use of svchost.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Memory Forensics",
+            "Sysmon"
+        ]
+    },
+    "cmd.exe": {
+        "ioc": [
+            "Malicious or suspicious use of cmd.exe"
+        ],
+        "tools": [
+            "PowerShell Logging",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "tasklist": {
+        "ioc": [
+            "Host reconnaissance via tasklist.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "procdump": {
+        "ioc": [
+            "Malicious or suspicious use of procdump.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "certutil": {
+        "ioc": [
+            "Malicious or suspicious use of certutil"
+        ],
+        "tools": [
+            "SIEM",
+            "PowerShell Logging",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "schtasks.exe": {
+        "ioc": [
+            "Malicious or suspicious use of schtasks.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "PowerShell Logging",
+            "Sysmon"
+        ]
+    },
+    "wevtutil": {
+        "ioc": [
+            "Malicious or suspicious use of wevtutil"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "Log Analysis"
+        ]
+    },
+    "net.exe": {
+        "ioc": [
+            "Malicious or suspicious use of net.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "msiexec.exe": {
+        "ioc": [
+            "Malicious or suspicious use of msiexec.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "winword.exe": {
+        "ioc": [
+            "Malicious or suspicious use of winword.exe"
+        ],
+        "tools": [
+            "Behavioral Analysis",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "wmic.exe": {
+        "ioc": [
+            "Malicious or suspicious use of wmic.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "ntdsutil.exe": {
+        "ioc": [
+            "Malicious or suspicious use of ntdsutil.exe"
+        ],
+        "tools": [
+            "SIEM",
+            "Credential Dumping Detection",
+            "Sysmon"
+        ]
+    },
+    "http": {
+        "ioc": [
+            "Malicious or suspicious use of http protocol"
+        ],
+        "tools": [
+            "SIEM",
+            "Network IDS (Zeek, Suricata)",
+            "Firewall Logs"
+        ]
+    },
+    "https": {
+        "ioc": [
+            "Malicious or suspicious use of https protocol"
+        ],
+        "tools": [
+            "SIEM",
+            "Network IDS (Zeek, Suricata)",
+            "Firewall Logs"
+        ]
+    },
+    "ftp": {
+        "ioc": [
+            "Malicious or suspicious use of ftp protocol"
+        ],
+        "tools": [
+            "SIEM",
+            "Network IDS",
+            "Firewall Logs"
+        ]
+    },
+    "smb": {
+        "ioc": [
+            "Malicious or suspicious use of smb protocol"
+        ],
+        "tools": [
+            "SIEM",
+            "Network IDS (Zeek, Suricata)"
+        ]
+    },
+    "imap": {
+        "ioc": [
+            "Malicious or suspicious use of imap protocol"
+        ],
+        "tools": [
+            "SIEM",
+            "Email Security Gateway",
+            "EDR"
+        ]
+    },
+    "smtp": {
+        "ioc": [
+            "Malicious or suspicious use of smtp protocol"
+        ],
+        "tools": [
+            "SIEM",
+            "Email Security Gateway",
+            "Firewall Logs"
+        ]
+    },
+    "tor": {
+        "ioc": [
+            "Malicious or suspicious use of tor protocol"
+        ],
+        "tools": [
+            "SIEM",
+            "Network IDS (Zeek, Suricata)",
+            "Firewall Logs"
+        ]
+    },
+    "base64": {
+        "ioc": [
+            "Use of base64 encoding algorithm"
+        ],
+        "tools": [
+            "SIEM",
+            "Memory Forensics",
+            "Sysmon"
+        ]
+    },
+    "xor": {
+        "ioc": [
+            "Use of xor encoding algorithm"
+        ],
+        "tools": [
+            "SIEM",
+            "Memory Forensics",
+            "Sysmon"
+        ]
+    },
+    "python": {
+        "ioc": [
+            "Use of python language for suspicious actions"
+        ],
+        "tools": [
+            "Endpoint Monitoring",
+            "Sysmon",
+            "SIEM"
+        ]
+    },
+    "powershell-based": {
+        "ioc": [
+            "Use of powershell-based language for suspicious actions"
+        ],
+        "tools": [
+            "SIEM",
+            "PowerShell Logging",
+            "EDR"
+        ]
+    },
+    "trickbot": {
+        "ioc": [
+            "Use of trickbot malware"
+        ],
+        "tools": [
+            "SIEM",
+            "Threat Intelligence",
+            "EDR"
+        ]
+    },
+    "njrat": {
+        "ioc": [
+            "Use of njrat malware"
+        ],
+        "tools": [
+            "SIEM",
+            "Threat Intelligence",
+            "EDR"
+        ]
+    },
+    "currentversion": {
+        "ioc": [
+            "Modification of registry key: HKCU\\...\\currentversion\\run or HKLM\\...\\currentversion\\run"
+        ],
+        "tools": [
+            "Registry Monitoring (Sysmon, SIEM)"
+        ]
+    },
+    "CVE-2020-1234": {
+        "ioc": [
+            "Exploitation of CVE-2020-1234"
+        ],
+        "tools": [
+            "Vulnerability Scanner (Qualys, Nessus)",
+            "EDR"
+        ]
+    },
+    "CVE-2017-0144": {
+        "ioc": [
+            "Exploitation of CVE-2017-0144 (EternalBlue)"
+        ],
+        "tools": [
+            "SIEM",
+            "Vulnerability Scanner (Qualys, Nessus)"
+        ]
+    },
+    "CVE-2021-3156": {
+        "ioc": [
+            "Exploitation of CVE-2021-3156 (Sudo Bug)"
+        ],
+        "tools": [
+            "SIEM",
+            "Sysmon",
+            "EDR"
+        ]
+    },
+    "CVE-2017-11882": {
+        "ioc": [
+            "Exploitation of CVE-2017-11882 (Microsoft Office Memory Corruption)"
+        ],
+        "tools": [
+            "SIEM",
+            "Vulnerability Scanner",
+            "EDR"
+        ]
+    },
+    "Google Drive": {
+        "ioc": [
+            "Communications with external Google Drive"
+        ],
+        "tools": [
+            "SIEM",
+            "Network IDS (Zeek, Suricata)",
+            "Firewall Logs"
+        ]
+    },
+    "usb": {
+        "ioc": [
+            "Modification of registry key: HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Control\\usbflags"
+        ],
+        "tools": [
+            "Registry Monitoring (Sysmon, SIEM)"
+        ]
+    }
 }
-
-
